--- a/M2_CONTENIDO_EDUCATIVO/templates/repositorio/form_fragmento.html
+++ b/M2_CONTENIDO_EDUCATIVO/templates/repositorio/form_fragmento.html
@@ -1,4 +1,4 @@
-<form method="POST" enctype="multipart/form-data">
+<form id="form-frag-examen" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn-submit">Guardar</button>
